House systen text align fix

--- a/themes/gsgsite/assets/css/main.css
+++ b/themes/gsgsite/assets/css/main.css
@@ -2632,7 +2632,7 @@ html[lang=en-US] .housesys__menu_title {
 }
 html[lang=en-US] .housesys__menu_desc > div {
   direction: rtl;
-  text-align-last: left;
+  text-align: left;
 }
 .housesys__menu_desc .nice-select{
   height: 25px;
